--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -1,4 +1,4 @@
-name: MLflow CI Advanced
+name: MLflow CI
 
 on:
   push:
@@ -10,55 +10,63 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      # 1. Checkout
+      # Checkout
       - name: Run actions/checkout@v3
         uses: actions/checkout@v3
 
-      # 2. Set up Python 3.12.7
+      # Set up Python 3.12.7
       - name: Set up Python 3.12.7
         uses: actions/setup-python@v5
         with:
           python-version: "3.12.7"
 
-      # 3. Check Env
+      # Check Env
       - name: Check Env
         run: |
           python --version
           pip --version
 
-      # 4. Install dependencies
+      # Install dependencies
       - name: Install dependencies
         run: |
           pip install mlflow==2.19.0
           pip install pandas numpy scikit-learn
 
-      # 5. Run MLflow Project
+      # Run MLflow Project (DagsHub)
       - name: Run mlflow project
+        env:
+          MLFLOW_TRACKING_URI: https://dagshub.com/viramonicaas/eksperimen_SML_ViraMonica.mlflow
+          MLFLOW_TRACKING_USERNAME: viramonicaas
+          MLFLOW_TRACKING_PASSWORD: ${{ secrets.DAGSHUB_TOKEN }}
         run: |
           cd MLProject
-          mlflow run .
+          mlflow run . --env-manager=local
 
-      # 6. Get latest MLflow run_id
+      # Get latest MLflow run_id
       - name: Get latest MLflow run_id
+        env:
+          MLFLOW_TRACKING_URI: https://dagshub.com/viramonicaas/eksperimen_SML_ViraMonica.mlflow
+          MLFLOW_TRACKING_USERNAME: viramonicaas
+          MLFLOW_TRACKING_PASSWORD: ${{ secrets.DAGSHUB_TOKEN }}
         run: |
           RUN_ID=$(mlflow runs list --max-results 1 | tail -n 1 | awk '{print $1}')
           echo "RUN_ID=$RUN_ID" >> $GITHUB_ENV
 
-      # 7. Upload artifacts (pengganti Google Drive → GitHub)
+      # Upload artifacts
       - name: Upload artifacts to GitHub
         uses: actions/upload-artifact@v4
         with:
           name: mlflow-artifacts
           path: mlruns/
 
-      # 8. Log in to Docker Hub
+      # Log in Docker Hub
       - name: Log in to Docker Hub
         uses: docker/login-action@v3
         with:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
 
-      # 9. Build Docker Model
+      # Build Docker Model
       - name: Build Docker Model
         run: |
           cd MLProject
@@ -66,12 +74,11 @@ jobs:
             -m runs:/$RUN_ID/model \
             -n viramonicaa/diabetes-mflow
 
-      # 10. Tag Docker Image
+      # Tag Docker Image
       - name: Tag Docker Image
         run: |
           docker tag viramonicaa/diabetes-mflow viramonicaa/diabetes-mflow:latest
 
-      # 11. Push Docker Image
-      - name: Push Docker Image
+      # Push Docker Image
         run: |
           docker push viramonicaa/diabetes-mflow:latest
