--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -49,7 +49,7 @@ jobs:
           MLFLOW_TRACKING_USERNAME: viramonicaas
           MLFLOW_TRACKING_PASSWORD: ${{ secrets.DAGSHUB_TOKEN }}
         run: |
-          RUN_ID=$(mlflow runs list --max-results 1 | tail -n 1 | awk '{print $1}')
+          RUN_ID=$(mlflow runs list --experiment-name ci-mlflow --max-results 1 | tail -n 1 | awk '{print $1}')
           echo "RUN_ID=$RUN_ID" >> $GITHUB_ENV
 
       # Upload artifacts
@@ -57,7 +57,7 @@ jobs:
         uses: actions/upload-artifact@v4
         with:
           name: mlflow-artifacts
-          path: mlruns/
+          path: MLProject/
 
       # Log in Docker Hub
       - name: Log in to Docker Hub
