--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -49,7 +49,7 @@ jobs:
           MLFLOW_TRACKING_USERNAME: viramonicaas
           MLFLOW_TRACKING_PASSWORD: ${{ secrets.DAGSHUB_TOKEN }}
         run: |
-          RUN_ID=$(mlflow runs list --experiment-id --max-results 1 | tail -n 1 | awk '{print $1}')
+          RUN_ID=$(mlflow runs list --experiment-id 0 --max-results 1 | tail -n 1 | awk '{print $1}')
           echo "RUN_ID=$RUN_ID" >> $GITHUB_ENV
       
       - name: Debug RUN_ID
