--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -49,7 +49,7 @@ jobs:
           MLFLOW_TRACKING_USERNAME: viramonicaas
           MLFLOW_TRACKING_PASSWORD: ${{ secrets.DAGSHUB_TOKEN }}
         run: |
-          RUN_ID=$(mlflow runs list --experiment-id 0 --max-results 1 | tail -n 1 | awk '{print $1}')
+          RUN_ID=$(mlflow runs list --experiment-id 0 | awk ''NR==2 {print $1}')
           echo "RUN_ID=$RUN_ID" >> $GITHUB_ENV
       
       - name: Debug RUN_ID
@@ -77,7 +77,6 @@ jobs:
           MLFLOW_TRACKING_USERNAME: viramonicaas
           MLFLOW_TRACKING_PASSWORD: ${{ secrets.DAGSHUB_TOKEN }}
         run: |
-          echo "Building docker for run_id=$RUN_ID"
           cd MLProject
           mlflow models build-docker \
             -m runs:/$RUN_ID/model \
