--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -32,29 +32,17 @@ jobs:
           pip install mlflow==2.19.0
           pip install pandas numpy scikit-learn
 
+      - name: Set MLflow DagsHub Env
+        run: |
+          echo "MLFLOW_TRACKING_URI=https://dagshub.com/viramonicaas/eksperimen_SML_ViraMonica.mlflow" >> $GITHUB_ENV
+          echo "MLFLOW_TRACKING_USERNAME=viramonicaas" >> $GITHUB_ENV
+          echo "MLFLOW_TRACKING_PASSWORD=${{ secrets.DAGSHUB_TOKEN }}" >> $GITHUB_ENV
+
       # Run MLflow Project (DagsHub)
       - name: Run mlflow project
-        env:
-          MLFLOW_TRACKING_URI: https://dagshub.com/viramonicaas/eksperimen_SML_ViraMonica.mlflow
-          MLFLOW_TRACKING_USERNAME: viramonicaas
-          MLFLOW_TRACKING_PASSWORD: ${{ secrets.DAGSHUB_TOKEN }}
         run: |
           cd MLProject
           mlflow run . --env-manager=local
-
-      # Get latest MLflow run_id
-      - name: Get latest MLflow run_id
-        env:
-          MLFLOW_TRACKING_URI: https://dagshub.com/viramonicaas/eksperimen_SML_ViraMonica.mlflow
-          MLFLOW_TRACKING_USERNAME: viramonicaas
-          MLFLOW_TRACKING_PASSWORD: ${{ secrets.DAGSHUB_TOKEN }}
-        run: |
-          RUN_ID=$(mlflow runs list --experiment-id 0 | awk 'NR==2 {print $1}')
-          echo "RUN_ID=$RUN_ID" >> $GITHUB_ENV
-      
-      - name: Debug RUN_ID
-        run: |
-          echo "RUN_ID is: $RUN_ID"
 
       # Upload artifacts
       - name: Upload artifacts to GitHub
@@ -72,18 +60,18 @@ jobs:
 
       # Build Docker Model
       - name: Build Docker Model
-        env:
-          MLFLOW_TRACKING_URI: https://dagshub.com/viramonicaas/eksperimen_SML_ViraMonica.mlflow
-          MLFLOW_TRACKING_USERNAME: viramonicaas
-          MLFLOW_TRACKING_PASSWORD: ${{ secrets.DAGSHUB_TOKEN }}
         run: |
           cd MLProject
           mlflow models build-docker \
-            -m runs:/$RUN_ID/model \
+            -m runs:/$MLFLOW_RUN_ID/model \
             -n viramonicaa/diabetes-mflow
 
       # Tag Docker Image
       - name: Tag Docker Image
         run: |
           docker tag viramonicaa/diabetes-mflow viramonicaa/diabetes-mflow:latest
+
+      # Push Docker Image
+      - name: Push Docker Image
+        run: |
           docker push viramonicaa/diabetes-mflow:latest
